# SE3D

./: Final Report - Latest.tex  README.md  SoftEngProj.rar
Software/: README.md  SE3D_Console.rar
Software/Registration_Module/: CMakeLists.txt  Readme.md  commonfunc.cpp  commonfunc.h  main.cpp
Software/SE3D_Console/: CMakeLists.txt  main.cpp  reconstructor.cpp  reconstructor.h  recorder.cpp  recorder.h  utility.cpp  utility.h
Weekly Reports/: README.md  Report 1 (27-11-2017) .docx  Report 1.txt  Tasks Breakdown.txt
